2010-11-21 German Arias <german@xelalug.org>
	* Framework/PCProjectInspector.m: Set "project" and 
	"projectDir" when the panel is loaded. And take the
	languages to the popup from the PCUserLanguages key
	instead of NSUserDefaults.

2010-11-21 German Arias <german@xelalug.org>
	* Framework/PCProject.m:
	* Modules/Projects/Application/PCAppProject.m:
	* Modules/Projects/Application/PCAggregateProject.m:
	* Modules/Projects/Application/PCLibProject.m:
	* Modules/Projects/Application/PCBundleProject.m:
	* Modules/Projects/Application/PCFrameworkProject.m:
	* Modules/Projects/Application/PCToolProject.m:
	* Modules/Projects/Application/PCResourceSetProject.m:	
	Set the key PCUserLanguages when the project is created not
	when is loaded.

2010-11-18 Riccardo Mottola

	* Modules/Editors/ProjectCenter/PCEditor.m:
	Init could return a different object, take it in account.
	
	* Framework/PCProjectEditor.m:
	Remove useless instruction and assignment.

	* Framework/PCProject.m:
	Fix memory leak.

	* Modules/Editors/ProjectCenter/PCEditor.m:
	Initialize range to ensure it does not contain garbage.

2010-11-16 German Arias <german@xelalug.org>
	* Framework/PCFileManager.m: Allow open .project directories
	to add files placed at project directory in AddFiles panel.

2010-11-05 German Arias <german@xelalug.org>
	* Modules/Projects/Application/PCAppProject.m: 
	(-createProjectAt:) Delete the extension on the	project 
	name to avoid file names like MyApp.project.plist
	and an ugly name of the app (MyApp.project) at info panel.

2010-08-10 Sergii Stoian <stoyan255@ukr.net>
	* Framework/PCProjectBrowser.m:
	(-nameOfSelectedCategory): Return 'nil' if name of subproject
	selected. Add comments.
	(-nameOfSelectedFile): Check if category is selected.
	(-click:): check if category is selected.

2010-07-31 Sergii Stoian <stoyan255@ukr.net>
	* Framework/PCProject.m:
	(-assignProjectDict:): Fix setting projectPath to project
	dir (not to *.pcproj dir).
	* Framework/PCFilemanager.m: